@@ -1,0 +1,20 @@
+#!/bin/sh
+
+# (These account numbers are no longer in use)
+
+BANKDATA_ARG=""
+# If this is an automake test, then read from the environment
+if test "x${BANKDATA_SRCPATH}" != "x" ; then
+  BANKDATA_ARG="--file=${BANKDATA_SRCPATH}/bankdata.txt"
+fi
+
+# This check should return 0. If not, error
+./ktoblzcheck ${BANKDATA_ARG} 20050550 1262693334 >/dev/null  || exit 1
+
+# This check should return 1. If not, error
+./ktoblzcheck ${BANKDATA_ARG} 20050550 1262693333 >/dev/null  && exit 1
+
+# All seems to be fine
+exit 0
+
+
