@@ -1,21 +1,21 @@
-AUTOMAKE_OPTIONS = 1.4
+#AUTOMAKE_OPTIONS = 1.4
 
-INCLUDES=-I../include -I../../include
+INCLUDES = -I$(top_srcdir)/src/include
 
-iheaderdir=${includedir}
-include_HEADERS = 
+#include_HEADERS = 
+
 noinst_HEADERS = \
   algorithms.h
 
-lib_LTLIBRARIES=libktoblzcheck.la
+lib_LTLIBRARIES = libktoblzcheck.la
 
 libktoblzcheck_la_SOURCES= \
   ktoblzcheck.cc \
   algorithms.cc \
   accnum.cc 
 
-libktoblzcheck_la_LDFLAGS= -version-info 1:3:0
-libktoblzcheck_la_LIBADD= @LIBS@ -lstdc++
+libktoblzcheck_la_LDFLAGS = -version-info 1:3:0
+libktoblzcheck_la_LIBADD = -lstdc++
 
 #ktoblzcheck.cc: data.cc
 #data.cc: ../bankdata/bankdata.txt
