@@ -1,3 +1,11 @@
+2004-01-27  Christian Stimming <stimming@tuhh.de>
+
+	* src/bin/ktoblzcheck.cc: Fix handling of bankdata path
+	argument. Also, add argument "--bankdata-path" that (guess what)
+	prints the bankdata path.
+
+	* src/bin/Makefile.am, check_ktoblzcheck: Add test script and
+	"make check" target. Clean up makefiles.
 
 2004/01/19: Martin Preuss<martin@libchipcard.de>
 ------------------------------------------------
